--- a/src/pages/home/header_home.css
+++ b/src/pages/home/header_home.css
@@ -1,75 +1,78 @@
+
+
 .header_pic {
-  margin-top: 0px;
-  margin-left: 0px;
   width: 100%;
-  height: 650px;
-  margin-bottom: 100px;
+  height: 100vh;
+  margin-bottom: 20px;
   background: linear-gradient(
       0deg,
       rgba(255, 255, 255, 0.5),
       rgba(255, 255, 255, 0.5)
     ),
-    url(C:\Users\safaaa\tourism-app\src\assets\logos\chaouen.jpeg);
+    url("../../assets/logos/chaouen.jpeg");
   opacity: 0.4;
 }
+
+
 .header_title {
   position: absolute;
   left: 15%;
   right: 55%;
   top: 25%;
   bottom: 74.61%;
-  font-family: Poppins;
+  font-family: "Poppins",sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 50px;
-  line-height: 50px;
+  line-height: 70px;
   color: #0a4843;
 }
 .header_text {
   position: absolute;
-  left: 16%;
+  left: 15%;
   right: 51%;
   top: 53%;
   bottom: 73.62%;
-
-  font-family: Poppins;
+  font-family: 'Poppins',sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
   font-size: 20px;
   line-height: 30px;
-
   color: #000000;
 }
-.create_tour {
+.create-tour{
   background-color: #0a4843 !important;
   position: absolute;
   top: 70%;
-  left: 17%;
+  left: 16%;
   width: 200px;
+  color: white !important;
 }
+
 .discover_tour {
   position: absolute;
+  border-radius: 10px;
   top: 85%;
-  left: 17%;
+  left: 16%;
   width: 200px;
   color: #0a4843 !important;
 }
 .underline_button {
   position: absolute;
-  left: 17.5%;
+  left: 16%;
   top: 80%;
   width: 70px;
   border: 1px solid #615f5f;
   transform: rotate(-180deg);
 }
-span {
+.or{
   position: absolute;
-  left: 23.5%;
+  left: 21.5%;
   top: 78%;
 }
 .underline_button2 {
   position: absolute;
-  left: 26%;
+  left: 24%;
   top: 80%;
   width: 70px;
 
