--- a/src/pages/home/navBar.css
+++ b/src/pages/home/navBar.css
@@ -1,4 +1,6 @@
-.logo {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.navbar-logo{
   width: 100px;
   float: left;
 }
@@ -13,11 +15,11 @@
   padding-left: 150px;
 }
 
-li {
+.nav-header li {
   padding-right: 80px;
 }
-a {
-  font-family: Poppins;
+.nav-header a {
+  font-family: 'Poppins',sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
