--- a/src/pages/home/popular_destinations.css
+++ b/src/pages/home/popular_destinations.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .popular_destinations {
-  font-family: Poppins;
+  font-family: 'Poppins',sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 28px;
@@ -10,7 +13,7 @@
   color: #0a4843;
 }
 
-h2 {
+.main-container h2 {
   position: relative;
   top: 10px;
   left: 20px;
@@ -25,9 +28,9 @@ h2 {
   border-radius: 20px;
   margin-bottom: 100px;
 }
-img {
+/* img {
   width: 350px;
-}
+} */
 .images {
   position: relative;
 }
@@ -174,11 +177,11 @@ img {
   border-radius: 10px;
 }
 
-figure img {
+.main_container .images figure img {
   transition: 1s ease;
 }
 
-figure img:hover {
+.main_container .images figure img:hover {
   border-radius: 50%;
   transition: 1s ease;
 }
