--- a/src/styles/places.css
+++ b/src/styles/places.css
@@ -37,6 +37,8 @@
   text-decoration: underline;
 }
 .place-category {
+  text-align: left;
+  padding-left: 11px;
   display: inline-flex;
   margin-bottom: 0;
   color: maroon;
@@ -46,13 +48,14 @@
 }
 
 .rating-comp {
-  margin-left: 50px;
+  margin-left: -11px;
   padding-top: 0;
   padding-right: 0;
   padding-left: 0;
   padding-bottom: 0;
 }
 .place-name {
+  text-align: left;
   margin-top: 0;
   margin-bottom: 2px;
   font-style: normal;
@@ -80,16 +83,10 @@
   background-color: #e1dede;
   border-radius: 10px;
   font-size: 13px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   justify-content: center;
   text-transform: capitalize;
   color: #212121;
-  margin-left: 0px;
-  margin-right: 10px;
-  margin-top: -25px;
-  position: absolute;
+
 }
 .see-more-choose-mode {
   margin-left: 65px !important;
@@ -102,16 +99,10 @@
   background-color: #38b4aa;
   border-radius: 10px;
   font-size: 13px;
-  display: flex;
   align-items: center;
-  text-align: center;
-  justify-content: center;
   text-transform: capitalize;
   color: white;
-  margin-left: 40px;
-  margin-right: 10px;
-  margin-top: -25px;
-  position: absolute;
+
 }
 .bor {
   border: solid 5px #28857d !important;
