--- a/src/pages/customTour/customTour.css
+++ b/src/pages/customTour/customTour.css
@@ -12,7 +12,7 @@
 }
 
 .stepper-container{
-    min-height: 100vh;
+    min-height: 90vh;
     font-family: var(--font-family);
 }
 
@@ -26,6 +26,7 @@
     padding-top: 150px;
     padding-left: 55px;
     padding-right: 55px;
+    padding-bottom: 40px;
 }
 .stepper-inner{
     margin: auto;
@@ -48,6 +49,10 @@
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
+.tour-type-option:hover{
+    box-shadow: 0 0 11px cornflowerblue; 
+  }
+
 
 .tour-type-option .option-title{
     margin-top: 20px;
@@ -80,7 +85,7 @@
 }
 
 .stepper-inner .subquestion{
-    padding-bottom: 55px;
+  padding-bottom: 20px;
     font-weight: 400;
     font-size: 15px;
     line-height: 29px;
@@ -138,7 +143,7 @@
   /* padding: 20px; */
 }
 
-.event-card {
+#event-card {
   width: 400px;
   height: 400px;
   border-radius: 3px;
@@ -151,21 +156,19 @@
   /* margin: 5px; */
   border-radius: 12px;
 }
-.event-card .event-add{
- background: var(--darkGreen);
- margin-top: -20px;
- position: absolute;
- width: 120px;
- min-width: 80px;
- color: #fff;
- text-transform: capitalize;
- margin-left: 100px;
- margin-right: 120px;
-
-
+#event-card .add-to-card_btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  min-width: 80px;
+  background-color: #38b4aa;
+  border-radius: 10px;
+  font-size: 13px;
+  align-items: center;
+  text-transform: capitalize;
+  color: white;
 }
 
-.event-card:hover {
+#event-card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -199,7 +202,7 @@
   margin: 5px;
 }
 
-.event-card:hover .event-card-info {
+#event-card:hover .event-card-info {
   transform: translateY(0);
 }
 
@@ -213,20 +216,7 @@
   color: white;
   border: none;
 }
-.event-card-button {
-  font-family: var(--font-family);
-  width: 120px;
-  font-size: 15px;
-  font-weight: 300;
-  letter-spacing: 0.055em;
-  padding-top: 50;
-  background: transparent;
-  color: white;
-  border: 1px solid;
-  border-radius: 5px;
-  margin: 15px;
-  float: center;
-}
+
 
 .event-card-description {
   font-size: 14px;
@@ -234,9 +224,10 @@
   line-height: 25px;
   align-items: center;
   justify-content: center;
-  text-align: justify;
+  text-align: center;
   padding-left: 30px;
   padding-right: 30px;
+  padding-top: 30px;
 }
 .date{
 display: flex;
@@ -353,7 +344,7 @@ font-size: 14px;
 }
 .hotel-name{
     margin-top: 0;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     text-align: left;
     font-style: normal;
     font-size: 16px;
@@ -377,6 +368,7 @@ font-size: 14px;
 .hotel-price-range{
     display: flex;
     text-align: left;
+    padding-bottom: 10px;
 
 }
 .hotel-price-range span{
@@ -390,24 +382,16 @@ font-size: 14px;
 }
     
 
-.hotel-card .add-btn{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    height: 35px;
-    width: 125px;
-    background-color: #F08019;
-    border-radius: 10px;
-    font-size: 13px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    text-transform:capitalize;
-    color: white;
-    margin-left: 180px;
-    margin-right: 10px;
-    margin-top: -29px;
-    position: absolute;
+.hotel-card .add-to-card_btn{
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  min-width: 80px;
+  background-color: #38b4aa;
+  border-radius: 10px;
+  font-size: 13px;
+  align-items: center;
+  text-transform: capitalize;
+  color: white;
 
 }
  /* Styling Restaurants Component  */
@@ -430,7 +414,7 @@ font-size: 14px;
 }
 .restaurant-name{
     margin-top: 0;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
     text-align: left;
     font-style: normal;
     font-size: 16px;
@@ -451,8 +435,8 @@ font-size: 14px;
 
 
 .restaurant-price-range{
-    display: flex;
     text-align: left;
+    padding-top: 15px;
 
 }
 .restaurant-price-range span{
@@ -464,20 +448,50 @@ font-size: 14px;
         letter-spacing: 0em;
         padding-left: 5px;
 }
-    
 
-.restaurant-card .add-btn{
-    font-family: 'Roboto', sans-serif;
+ .see-more-btn{
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
-    height: 35px;
-    width: 125px;
-    background-color: #F08019;
+    min-width: 80px;
+    background-color: #e1dede;
     border-radius: 10px;
     font-size: 13px;
-    display: flex;
-    align-items: center;
     justify-content: center;
-    text-transform:capitalize;
+    text-transform: capitalize;
+    color: #212121;
+}
+
+.restaurant-card .add-to-card_btn{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    min-width: 80px;
+    background-color: #38b4aa;
+    border-radius: 10px;
+    font-size: 13px;
+    align-items: center;
+    text-transform: capitalize;
     color: white;
 }
   
+.restaurant-card .counter {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  height: 50px;
+  width: 50px;
+  background-color: #38b4aa;
+  border-radius: 50px;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  text-transform: capitalize;
+  color: white;
+  margin-left: 40px;
+  margin-right: 10px;
+  margin-top: -25px;
+  position: absolute;
+  z-index: 2;
+  right: -15px;
+  top: 20px;
+}
