--- a/src/pages/profile/headerProfile.css
+++ b/src/pages/profile/headerProfile.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap");
+
 /* header*/
 
 .card-profile {
@@ -11,6 +13,15 @@
   padding-right: 10px;
   padding-bottom: 420px;
   margin-bottom: 30px;
+}
+.modal-profile {
+  display: block !important;
+  top: 100px !important;
+  left: -200px;
+  padding: 15px !important;
+}
+.modal-header {
+  display: inline !important;
 }
 .img-profile {
   height: 250px;
@@ -57,6 +68,14 @@
   background-color: #eee;
   border-radius: 50%;
 }
+.modal-title-edit {
+  color: black !important;
+}
+.btn-close-profile {
+  position: absolute !important;
+  top: 10px !important;
+  right: 10px;
+}
 /* tabs*/
 .tabsContainer {
   border-radius: 20px !important;
@@ -83,37 +102,72 @@
 }
 
 .img-sm {
-  padding-left: 0px !important;
+  visibility: hidden;
+}
+.card-prof-star:hover {
+  padding: 0px !important;
+  background-color: rgb(40, 133, 125);
 }
 
-.card-prof {
-  padding: 0px !important;
+.cont-card:hover {
+  transform: scale(1.12);
+}
+
+.cont-card:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  z-index: 1;
+  transform: skewY(-5deg) scale(1.5);
 }
 .card-prof h5 {
-  font-size: 12pt;
+  font-size: 14pt;
+  font-weight: 500;
   line-height: 1.6;
 }
+.card-prof {
+  height: 250px;
+}
+
 .title-history {
   padding-top: 5px;
   color: black;
   font-size: 16pt;
-  font-family: "Poppins", sans-serif;
+  font-family: "Slabo 27px", serif;
   font-style: normal;
-  font-weight: 500;
+  word-spacing: 10px;
+  font-weight: 700;
   line-height: 50px;
 }
+.title-history-follow {
+  color: black;
+  font-size: 12pt !important;
+  font-family: "Slabo 27px", serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 0px;
+}
+
 .btn-unfollow {
+  position: absolute;
   background-color: #eee;
   color: black;
   border: none;
+  font-size: 10pt !important;
   border-radius: 10px;
   margin-top: 0px;
   margin-left: 0px;
   box-shadow: 0px;
   width: 100px;
+  z-index: 3;
 }
 .btn-follow {
   background-color: #4267b2;
+  position: absolute;
+  z-index: 3;
   color: #eee;
   border: none;
   border-radius: 10px;
@@ -121,4 +175,23 @@
   margin-left: 0px;
   box-shadow: 0px;
   width: 100px;
+}
+.history-profile span {
+  padding-left: 50px;
+}
+
+.card-bodyHover {
+  position: absolute;
+  text-align: center;
+  margin-bottom: 200x !important;
+}
+
+.hoverH5 {
+  color: #eee;
+  font-size: 24pt !important;
+}
+.hoverH3 {
+  color: black;
+  font-size: 18pt;
+  padding-bottom: 20px;
 }
