--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,44 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-    --font-family : 'Poppins', sans-serif;
-    --black : #212121;
-    --clearGray : #E1DEDE;
-    --darkGray :  #C5C2C2;
-    --darkGreen :#28857D;
+  --font-family: "Poppins", sans-serif;
+  --black: #212121;
+  --clearGray: #e1dede;
+  --darkGray: #c5c2c2;
+  --darkGreen: #28857d;
 }
 
 .login,
 .image {
-  min-height: 100vh;
+  min-height: 80vh;
 }
 .bg-image {
-  background-image: url('../../assets/login-img.jpeg');
+  background-image: url("../../assets/login-img.jpeg");
   background-size: cover;
   background-position: center center;
 }
 
-.registration{
-    font-family: var(--font-family);
+.get-started {
+  font-size: 32pt !important;
+}
 
+.registration {
+  padding: 20px 20px;
+  margin-top: 90px;
+  font-family: var(--font-family);
 }
 .sign-up {
-    border-color: var(--darkGreen);
-    background-color: var(--darkGreen) !important;
+  border-color: var(--darkGreen);
+  background-color: var(--darkGreen) !important;
 }
-.password-note{
-    color: var(--darkGray);
-    font-size: 11px;
-    padding-top: 10px;
+.password-note {
+  color: var(--darkGray);
+  font-size: 11px;
+  padding-top: 10px;
 }
-.question-signin{
-    font-style: bold;
-    font-weight: 500;
+.question-signin {
+  font-style: bold;
+  font-weight: 500;
 }
-#email-note{
-    color: var(--darkGray);
-    font-size: 11px;
-    padding-top: 10px;
+#email-note {
+  color: var(--darkGray);
+  font-size: 11px;
+  padding-top: 10px;
 }
 /* .login-text{
     color: var(--darkGreen) !important;
