--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -19,7 +19,7 @@
 }
 
 .get-started {
-  font-size: 32pt !important;
+  font-size: 28pt !important;
 }
 
 .registration {
@@ -48,3 +48,34 @@
 /* .login-text{
     color: var(--darkGreen) !important;
 } */
+
+.success-register {
+  position: absolute;
+  top: -150px;
+  left: 0px;
+  font-weight: 500 !important;
+  letter-spacing: 2px;
+  line-height: 50px !important;
+  color: black;
+  font-style: bold;
+  font-size: 20pt !important;
+}
+
+.login-Error {
+  font-size: 14pt !important;
+  color: red;
+}
+.welcome-back {
+  padding-left: 0px !important;
+  padding-top: 20px !important;
+  font-size: 32pt !important;
+}
+.mx-auto {
+  position: relative !important;
+  padding: 0px !important;
+}
+
+.profile-btn {
+  background-color: #0a4843 !important;
+  border-color: #0a4843 !important;
+}
