--- a/src/pages/customTour/customTour.css
+++ b/src/pages/customTour/customTour.css
@@ -481,3 +481,115 @@
   right: -15px;
   top: 20px;
 }
+
+/* Styling Result Component  */
+.section {
+  margin-top: 60px;
+  position: relative;
+  display: block;
+  padding: 0px !important;
+}
+.section1 {
+  position: absolute;
+  top: 0px;
+  left: 0px !important;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+.btn-section-left {
+  border-top-left-radius: 20px !important;
+}
+.btn-section {
+  margin-left: 0px;
+  color: #e1dede !important;
+  background-color: #0a4843 !important;
+  border-color: #0a4843;
+  border-right-color: #e1dede;
+  border-right-width: 2px;
+  border-radius: none;
+  box-shadow: none;
+}
+.btn-section span {
+  font-size: 10pt;
+  color: white;
+  font-weight: 500;
+}
+
+.btn-section-right {
+  border-top-right-radius: 20px !important;
+  border-right: none;
+}
+
+.btn:focus,
+.btn:active,
+.btn:hover {
+  box-shadow: none !important;
+  outline: 0;
+}
+.map {
+  position: relative;
+  margin: 50px 20px;
+  padding: 0px;
+  padding-left: 100px;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  height: 400px;
+  margin-top: 100px;
+}
+
+.section-down1 {
+  margin-top: 0px;
+  position: relative;
+  bottom: 0px;
+  left: 0px !important;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  padding-bottom: 0px !important;
+}
+
+.btn-section-down {
+  margin-left: 0px;
+  color: var(--black) !important;
+  background-color: white;
+  border-color: #e1dede;
+  border-right-color: #e1dede;
+  border-right-width: 2px;
+  border-radius: none;
+  box-shadow: none;
+  padding: 0px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+.card-title-res {
+  font-size: 12pt;
+  color: #0a4843;
+}
+.card-text-res {
+  font-size: 9pt;
+}
+.card-text-updated {
+  font-size: 8pt;
+  padding-left: 10px;
+}
+.rating-res {
+  position: absolute;
+  bottom: 0px;
+  left: 90px;
+}
+.cardMargin {
+  margin-bottom: 0px !important;
+  height: 100%;
+  max-height: 100%;
+}
+
+.map-test {
+  margin: 80px 50px;
+  padding: 50px;
+}
+.bubble {
+  background-color: red !important;
+}
