--- a/src/pages/customTour/Toasts/ToastPlaces.css
+++ b/src/pages/customTour/Toasts/ToastPlaces.css
@@ -57,6 +57,6 @@
   width: 900px !important;
 }
 .img-caro {
-  width: 900px !important;
-  height:800px;
+  width: 200px !important;
+  height: 390px !important;
 }
