--- a/src/pages/customTour/customTour.css
+++ b/src/pages/customTour/customTour.css
@@ -451,7 +451,7 @@
   background-color: #e1dede;
   border-radius: 10px;
   font-size: 13px;
-  justify-content: center;
+  justify-content: left;
   text-transform: capitalize;
   color: #212121;
 }
@@ -539,14 +539,14 @@
 }
 .map {
   position: relative;
-  margin: 50px 20px;
+  margin-bottom: 100px;
   padding: 0px;
-  padding-left: 100px;
+  padding-left: 0px;
   width: 100%;
   height: auto;
   max-width: 100%;
   height: 400px;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 .section-down1 {
@@ -611,12 +611,16 @@
 .angleLeft {
   position: absolute;
   top: 40px;
-  left: -8px;
+  left: -2px;
   z-index: 1;
 }
 .angleRight {
   position: absolute;
   top: 40px;
-  right: -8px;
+  right: -2px;
   z-index: 1;
+}
+
+.loading-result {
+  margin: 50px 400px;
 }
