--- a/src/pages/profile/headerProfile.css
+++ b/src/pages/profile/headerProfile.css
@@ -97,7 +97,7 @@
   margin: 10px 135px;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  padding: 0px 0px;
+  padding: 20px 20px;
   padding-bottom: 30px;
 }
 
@@ -165,6 +165,13 @@
   box-shadow: 0px;
   width: 100px;
   z-index: 3;
+}
+.card-img-top {
+  height: 160px;
+}
+
+.titleCard {
+  font-size: 12pt !important;
 }
 .btn-follow {
   background-color: #4267b2;
