--- a/src/pages/trips/trips.css
+++ b/src/pages/trips/trips.css
@@ -1,29 +1,27 @@
+.trip-brief {
+  font-size: 10px;
+  color: #615f5f;
+  line-height: 15px;
+  display: flex;
+  text-align: justify;
 
-
-.trip-brief{
-    
-    font-size: 10px;
-    color: #615f5f;
-    line-height: 15px;
-    display: flex;
-    text-align: justify;
-  
-    --max-lines:3;
-    max-height:calc(15px * var(--max-lines));
-    overflow: hidden;
-} 
-
-.trip-name{
-    font-size: 18px;
-    padding-bottom:5px !important
+  --max-lines: 3;
+  max-height: calc(15px * var(--max-lines));
+  overflow: hidden;
 }
 
-.trip-date{
-    font-size: 18px;
+.trip-name {
+  font-size: 16px;
+  padding-bottom: 5px !important;
+  line-height: 0px !important;
 }
 
-.tripImg{
-    padding-top: 20px  !important;
-    width: 200px !important;
-    height: 270px;
+.trip-date {
+  font-size: 18px;
+}
+
+.imgTrip {
+  padding-top: 0px !important;
+  width: 300px !important;
+  height: 300px;
 }
